[package]
name = "robust"
version = "0.1.2"
description = "Robust predicates for computational geometry"
authors = [
    "The Spade Developers",
    "The GeoRust Developers",
]
homepage = "https://github.com/georust/robust"
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["robustness", "stability"]
categories = ["algorithms", "graphics", "science"]

[dependencies]
