[package]
name = "robust"
version = "0.2.3"
description = "Robust adaptive floating-point predicates for computational geometry"
authors = [
    "The Spade Developers",
    "The GeoRust Developers",
]
homepage = "https://github.com/georust/robust"
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["robustness", "stability"]
categories = ["algorithms", "graphics", "science"]

[dependencies]
ieee754 = { version = "0.2", optional = true } # https://github.com/rust-lang/rust/issues/50145

[features]
no_std = ["ieee754"]

[dev-dependencies]
png = "0.16.7"
float_extras = "0.1.6"
